# Advanced-Time-series-analysis

./: LICENSE  README.md  RNN_Pytorch.ipynb  XGBoost_Regressor.ipynb  gimnasio.csv  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage_example.py
notebooks/: Probabilistic-Time Series.ipynb  RNN_Pytorch.ipynb  XGBoost_Regressor.ipynb
src/time_series_framework/: __init__.py
src/time_series_framework/comparison/: __init__.py  comparative_analysis.py
src/time_series_framework/models/: __init__.py  gaussian_process.py  lstm_model.py  rnn_pytorch.py  xgboost_model.py
src/time_series_framework/utils/: __init__.py  data_preprocessing.py  evaluation_metrics.py  visualization.py
tests/: __init__.py  test_basic_functionality.py
